# olaf-vala

./: .gitignore  CMakeLists.txt  README.md  build.bat
native/: CMakeLists.txt
native/headers/: gpt.h  kdzstructs.h  lafstructs.h
src/: AtProtocol.vala  Crypto.vala  Gpt.vala  GptParser.vala  LafProtocol.vala  Util.vala  main.vala
src/Communication/: BaseDevice.vala  Serial.vala  Usb.vala
src/Packet/: AtCommand.vala  DeviceProperties.vala  LafCommand.vala  LafError.vala  LafPacket.vala
src/Structure/: DeviceProperties.vala  GptPartitionTable.vala  Kdz.vala  LafProperties.vala  PhoneInfo.vala
vapi/: Builtins.vapi  KdzStructs.vapi  LafStructs.vapi  WindowsCom.vapi  gpt.vapi  libserialport.vapi
